Rework staking main and setup screens

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -20,6 +20,9 @@
     <attr name="textSizeB1" format="reference" />
     <attr name="textSizeB2" format="reference" />
     <attr name="textSizeB3" format="reference" />
+
+    <attr name="textSizeTitle3" format="reference" />
+
     <!--text sizes-->
 
     <declare-styleable name="Toolbar">
