--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -12,6 +12,8 @@
     <dimen name="text_size_b2">12sp</dimen>
     <dimen name="text_size_b3">10sp</dimen>
 
+    <dimen name="text_size_title3">20sp</dimen>
+
     <dimen name="text_size_caps_title_1">12dp</dimen>
     <dimen name="text_size_caps_title_2">12dp</dimen>
 
