--- a/feature-staking-impl/src/main/res/layout/view_estimate_earning.xml
+++ b/feature-staking-impl/src/main/res/layout/view_estimate_earning.xml
@@ -36,8 +36,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="11dp"
             android:padding="8dp"
-            android:src="@drawable/ic_info_24"
-            app:tint="@color/actions_color" />
+            android:src="@drawable/ic_info_16"
+            app:tint="@color/white_64" />
 
     </LinearLayout>
 
@@ -47,13 +47,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
+        app:title="@string/staking_month_period_title"
         android:layout_marginTop="9dp"
         app:layout_constraintEnd_toStartOf="@id/stakingYearGain"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:showTitle="false"
-        app:startWithLoading="true"
-        app:titleDetail="@string/staking_month_period_title" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <io.novafoundation.nova.feature_staking_impl.presentation.staking.main.view.StakingInfoView
         android:id="@+id/stakingYearGain"
@@ -61,24 +59,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        app:title="@string/staking_year_period_title"
         app:layout_constraintBottom_toBottomOf="@+id/stakingMonthGain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/stakingMonthGain"
-        app:layout_constraintTop_toTopOf="@+id/stakingMonthGain"
-        app:showTitle="false"
-        app:startWithLoading="true"
-        app:titleDetail="@string/staking_year_period_title" />
+        app:layout_constraintTop_toTopOf="@+id/stakingMonthGain" />
 
-    <io.novafoundation.nova.common.view.AmountView
-        android:id="@+id/estimateEarningAmount"
-        android:layout_width="0dp"
+
+    <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/startStakingBtn"
+        style="@style/Widget.Nova.Button.Primary"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/stakingYearGain"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stakingMonthGain" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="24dp"
+        android:text="@string/staking_start_title" />
+
 </merge>
