--- a/feature-staking-impl/src/main/res/layout/view_staking_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_staking_info.xml
@@ -17,106 +17,32 @@
         android:textColor="@color/gray1"
         tools:text="Monthly" />
 
-    <LinearLayout
-        android:id="@+id/stakingInfoExtraTitleDetailView"
+    <TextView
+        android:id="@+id/stakingInfoGain"
+        style="@style/TextAppearance.NovaFoundation.Title3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/stakingInfoExtraBlockAdditional"
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:textColor="@color/green"
-            tools:text="+1.75%" />
-
-        <TextView
-            android:id="@+id/stakingInfoTitleDetail"
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:textColor="@color/green"
-            tools:text="APR" />
-    </LinearLayout>
+        android:layout_marginEnd="4dp"
+        android:includeFontPadding="false"
+        android:layout_marginTop="4dp"
+        android:singleLine="true"
+        android:visibility="gone"
+        android:textColor="@color/green"
+        tools:text="22.12%" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/stakingInfoBodyShimmer"
+        android:id="@+id/stakingInfoGainShimmer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false" />
+        android:visibility="visible">
 
         <View
-            android:layout_width="78dp"
+            android:layout_width="72dp"
             android:layout_height="12dp"
             android:layout_gravity="center"
             android:background="@drawable/bg_grey_solid_rounded" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
-
-    <TextView
-        android:id="@+id/stakingInfoBody"
-        style="@style/TextAppearance.NovaFoundation.Body0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:includeFontPadding="false"
-        android:singleLine="true"
-        tools:text="0.164 KSM" />
-
-    <LinearLayout
-        android:id="@+id/stakingInfoExtraBlock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:orientation="vertical">
-
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/stakingInfoExtraBlockShimmer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-            <TextView
-                style="@style/TextAppearance.NovaFoundation.Body2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false" />
-
-            <View
-                style="@style/TextAppearance.NovaFoundation.Body0"
-                android:layout_width="58dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:background="@drawable/bg_grey_solid_rounded" />
-
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
-        <TextView
-            android:id="@+id/stakingInfoExtraBlockValue"
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:textColor="@color/white_64"
-            tools:text="$8.131" />
-
-    </LinearLayout>
 
 </merge>
