--- a/feature-staking-impl/src/main/res/values/attrs.xml
+++ b/feature-staking-impl/src/main/res/values/attrs.xml
@@ -2,14 +2,10 @@
 <resources>
     <declare-styleable name="EstimateEarningView" />
     <declare-styleable name="StakingInfoView">
-        <attr name="titleText" format="string" />
-        <attr name="includeExtraBlock" format="boolean" />
-        <attr name="startWithLoading" format="boolean" />
-        <attr name="showTitle" format="boolean" />
-        <attr name="titleDetail" format="string" />
+        <attr name="title" />
     </declare-styleable>
 
-    <declare-styleable name="NetworkInfoCellView">
+    <declare-styleable name="ShimmeringAmountView">
         <attr name="title" />
         <attr name="useSecondaryValue" format="boolean" />
     </declare-styleable>
