Public sans fonts

--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -197,7 +197,7 @@
     <!--   Bottom Navigation -->
     <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textSize">10sp</item>
-        <item name="android:fontFamily">@font/soramitsu_semibold</item>
+        <item name="android:fontFamily">?attr/fontSemiBold</item>
     </style>
 
 </resources>
