--- a/feature-wallet-impl/src/main/res/layout/fragment_confirm_transfer.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_confirm_transfer.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="17dp"
         android:drawableStart="@drawable/ic_info_16"
         android:drawablePadding="4dp"
-        android:fontFamily="@font/soramitsu_bold"
+        android:fontFamily="?attr/fontBold"
         android:gravity="center_vertical"
         android:text="@string/choose_amount_available_balance"
         android:textAllCaps="true"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:fontFamily="@font/soramitsu_bold"
+        android:fontFamily="?attr/fontBold"
         android:gravity="center_vertical"
         android:textAllCaps="true"
         android:textColor="@color/green"
