--- a/common/src/main/res/layout/view_toolbar.xml
+++ b/common/src/main/res/layout/view_toolbar.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|end"
-        android:fontFamily="@font/soramitsu_semibold"
+        android:fontFamily="?attr/fontSemiBold"
         android:gravity="center_vertical"
         android:paddingStart="@dimen/x2"
         android:paddingEnd="@dimen/x2"
