--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -30,10 +30,10 @@
         <!--text sizes-->
 
         <!--fonts-->
-        <item name="fontSemiBold">@font/soramitsu_semibold</item>
-        <item name="fontBold">@font/soramitsu_bold</item>
-        <item name="fontExtraBold">@font/soramitsu_extrabold</item>
-        <item name="fontRegular">@font/soramitsu_regular</item>
+        <item name="fontSemiBold">@font/public_sans_semi_bold</item>
+        <item name="fontBold">@font/public_sans_bold</item>
+        <item name="fontExtraBold">@font/public_sans_extra_bold</item>
+        <item name="fontRegular">@font/public_sans_regular</item>
         <!--fonts-->
 
         <item name="colorAccent">@color/accentBlue</item>
