--- a/feature-account-impl/src/main/res/layout/item_node_group.xml
+++ b/feature-account-impl/src/main/res/layout/item_node_group.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:fontFamily="@font/soramitsu_semibold"
+    android:fontFamily="?attr/fontSemiBold"
     android:includeFontPadding="false"
     android:paddingStart="@dimen/x2"
     android:paddingTop="@dimen/x1"
