--- a/feature-wallet-impl/src/main/res/layout/item_contact_group.xml
+++ b/feature-wallet-impl/src/main/res/layout/item_contact_group.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:layout_marginTop="16dp"
-    android:fontFamily="@font/soramitsu_semibold"
+    android:fontFamily="?attr/fontSemiBold"
     android:includeFontPadding="false"
     android:paddingStart="@dimen/x2"
     android:paddingTop="@dimen/x1"
