--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -27,6 +27,7 @@
 
 
         <item name="textSizeTitle3">@dimen/text_size_title3</item>
+        <item name="textSizeSubHeadline">@dimen/text_size_subheadline</item>
         <!--text sizes-->
 
         <!--fonts-->
