--- a/feature-account-impl/src/main/res/values/attrs.xml
+++ b/feature-account-impl/src/main/res/values/attrs.xml
@@ -13,4 +13,10 @@
             <enum name="dark" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="SettingsItemView">
+        <attr name="title" />
+        <attr name="settingValue" format="string" />
+        <attr name="icon" />
+    </declare-styleable>
 </resources>
