--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/profileFragment"
         tools:layout="@layout/fragment_profile"
-        android:name="io.novafoundation.nova.feature_account_impl.presentation.profile.ProfileFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.settings.SettingsFragment"
         android:label="ProfileFragment" />
 
     <fragment
