--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -21,12 +21,14 @@
     <color name="blurColor">#8C000000</color>
     <color name="blurColorLight">#66000000</color>
 
+    <color name="white_8">#14FFFFFF</color>
     <color name="white_10">#1AFFFFFF</color>
     <color name="white_16">#29FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
     <color name="white_30">#4DFFFFFF</color>
     <color name="white_24">#3DFFFFFF</color>
     <color name="white_40">#66FFFFFF</color>
+    <color name="white_48">#7AFFFFFF</color>
     <color name="white_50">#80FFFFFF</color>
     <color name="white_64">#A6FFFFFF</color>
 
@@ -34,6 +36,8 @@
     <color name="black2">@color/gray2</color>
     <color name="black3">@color/gray3</color>
     <color name="black4">@color/gray4</color>
+
+    <color name="settings_group_background">#1D1D20</color>
 
     <color name="account_icon_light">#eeeeee</color>
     <color name="account_icon_dark">@color/black</color>
