--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -14,6 +14,8 @@
 
     <dimen name="text_size_title3">20sp</dimen>
 
+    <dimen name="text_size_subheadline">15sp</dimen>
+
     <dimen name="text_size_caps_title_1">12dp</dimen>
     <dimen name="text_size_caps_title_2">12dp</dimen>
 
