--- a/feature-account-impl/src/main/res/values/styles.xml
+++ b/feature-account-impl/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         <item name="android:scaleType">centerInside</item>
         <item name="android:elevation">2dp</item>
     </style>
+
+    <style name="Widget.Nova.Text.SettingsHeader" parent="TextAppearance.NovaFoundation.Caps">
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:paddingTop">24dp</item>
+
+        <item name="android:textColor">@color/white_64</item>
+    </style>
 </resources>
