--- a/feature-account-impl/src/main/res/layout/fragment_create_account.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_create_account.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
@@ -12,20 +11,25 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleText="@string/onboarding_create_account" />
+        app:dividerVisible="false" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/createAccountForcedChain"
-        android:layout_width="match_parent"
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Header2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/x2"
-        android:layout_marginTop="@dimen/x1"
-        android:layout_marginEnd="@dimen/x2"
-        app:actionIcon="@null"
-        app:enabled="false"
-        app:label="@string/common_chain"
-        tools:message="Kusama"
-        tools:textIcon="@drawable/ic_ksm_24" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_create_name_title" />
+
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_create_name_subtitle"
+        android:textColor="@color/black1" />
 
     <io.novafoundation.nova.common.view.InputField
         android:id="@+id/createAccountNameField"
@@ -33,20 +37,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/x2"
-        android:layout_marginTop="@dimen/x2"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="@dimen/x2"
-        android:layout_marginBottom="@dimen/x1"
-        android:hint="@string/username_setup_choose_title" />
+        android:hint="@string/account_wallet_nickname" />
 
     <TextView
+        android:id="@+id/createAccountNameDescription"
         style="@style/TextAppearance.NovaFoundation.Body2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/createAccountNameDescription"
         android:layout_marginStart="@dimen/x2"
         android:layout_marginEnd="@dimen/x2"
-        android:text="@string/username_setup_hint"
-        android:textColor="@color/white" />
+        android:layout_marginTop="12dp"
+        android:text="@string/account_create_name_examples"
+        android:textColor="@color/black1" />
 
     <Space
         android:layout_width="match_parent"
@@ -62,6 +66,6 @@
         android:layout_marginEnd="@dimen/x2"
         android:layout_marginBottom="@dimen/x3"
         android:enabled="false"
-        android:text="@string/common_next" />
+        android:text="@string/common_continue" />
 
 </LinearLayout>
