--- a/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:iconRight="@drawable/ic_info_white_24"
+        app:iconRight="@drawable/ic_options"
         app:titleText="@string/account_create_title" />
 
     <ScrollView
@@ -33,12 +33,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp" />
-
-            <io.novafoundation.nova.feature_account_impl.presentation.view.advanced.AdvancedBlockView
-                android:id="@+id/advancedBlockView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/x3" />
 
         </LinearLayout>
 
