--- a/feature-account-impl/src/main/res/layout/fragment_import_account.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_import_account.xml
@@ -9,7 +9,7 @@
     android:fitsSystemWindows="true">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/importAccountToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false"
@@ -23,10 +23,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:overScrollMode="never"
-        app:layout_constraintBottom_toTopOf="@id/nextBtn"
+        app:layout_constraintBottom_toTopOf="@id/importAccountContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/importAccountToolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,6 +38,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/importAccountTitle"
                 android:layout_height="wrap_content"
                 tools:text="@string/account_import_mnemonic_title"
                 android:layout_marginStart="16dp"
@@ -46,7 +47,7 @@
                 style="@style/TextAppearance.NovaFoundation.Header2" />
 
             <FrameLayout
-                android:id="@+id/sourceTypeContainer"
+                android:id="@+id/importAccountSourceContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -60,7 +61,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/nextBtn"
+        android:id="@+id/importAccountContinue"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,7 +70,7 @@
         android:layout_marginEnd="@dimen/x2"
         android:layout_marginBottom="@dimen/x3"
         android:enabled="false"
-        android:text="@string/common_next"
+        android:text="@string/common_continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
