--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="white_16">#29FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
     <color name="white_30">#4DFFFFFF</color>
+    <color name="white_32">#52FFFFFF</color>
     <color name="white_24">#3DFFFFFF</color>
     <color name="white_40">#66FFFFFF</color>
     <color name="white_48">#7AFFFFFF</color>
